--- a/example/index.html
+++ b/example/index.html
@@ -51,7 +51,7 @@
 	</script>
 	<script type="text/javascript" src="mono-config.js"></script>
 	<script type="text/javascript" src="runtime.js"></script>
-	<script async type="text/javascript" src="mono.js"></script>	
+	<script async type="text/javascript" src="dotnet.js"></script>	
 </body>
 
 </html>
